--- a/src/components/Common/Loading/LodingTable.module.css
+++ b/src/components/Common/Loading/LodingTable.module.css
@@ -4,7 +4,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 200px;
+    margin-top: 20vh;
+    margin-bottom: 33.3vh;
+}
+
+@media (max-width: 1550px) {
+    .main_loader_div {
+        margin-top: 20vh;
+        margin-bottom: 23.8vh;
+    }
 }
 
 .loader {
